# noodle

./: .envrc  CHANGELOG.md  LICENSE  README.md  cliff.toml  flake.nix  noodle.cabal  stack.yaml
.github/workflows/: actions.yaml
nix/: package.nix
src/: Json.hs  Lib.hs  Noodle.hs  Object.hs  Serialize.hs  Serializer.hs  Utils.hs  Yaml.hs
src/Noodle/: Deserialize.hs  Deserializer.hs  Json.hs  Serialize.hs  Serializer.hs  Toml.hs  Yaml.hs
src/Noodle/Json/: Parser.hs  Type.hs
src/Noodle/Parser/: Utils.hs
src/Noodle/Toml/: Type.hs
src/Noodle/Yaml/: Parser.hs  Type.hs
src/Noodle/Yaml/Parser/: Numbers.hs  String.hs
test/: DeserializerSpec.hs  SerializerSpec.hs  Spec.hs
test/Yaml/: ParserSpec.hs
test/Yaml/files/: basic.yaml  deep_nested.yaml  huge_subobject.yaml  nested.yaml  object.yaml  object_array.yaml
test/Yaml/files/numbers/: float.yaml  hexadecimal.yaml  octal.yaml  scientific.yaml
test/Yaml/files/strings/: block.yaml  collapsed.yaml  complex.yaml
