cabal-version:       2.2

name:                noodle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MartinFillon/noodle#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Martin Fillon
maintainer:          martin.fillon@hotmail.com
copyright:           2025 Martin Fillon
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Noodle
    Noodle.Serialize
    Noodle.Serializer
    Noodle.Deserialize
    Noodle.Deserializer
    Noodle.Parser.Utils
    Noodle.Json
    Noodle.Json.Type
    Noodle.Json.Parser
    Noodle.Yaml
    Noodle.Yaml.Type
    Noodle.Yaml.Parser
    Noodle.Toml
    Noodle.Toml.Type
  build-depends:       base >= 4.7 && < 5
                      , megaparsec
                      , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -XDeriveGeneric
                       -XEmptyCase
                       -XDefaultSignatures
                       -XTypeOperators
                       -XOverlappingInstances
                       -XFlexibleContexts
                       -XInstanceSigs
                       -XFlexibleInstances
                       -XMultiParamTypeClasses

test-suite noodle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    DeserializerSpec
    SerializerSpec
    Yaml.ParserSpec
  hs-source-dirs: test
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -XDeriveGeneric
                       -XEmptyCase
                       -XDefaultSignatures
                       -XTypeOperators
                       -XOverlappingInstances
                       -XFlexibleContexts
                       -XInstanceSigs
                       -XFlexibleInstances
                       -XMultiParamTypeClasses
  build-depends:
    base >=4.7 && <5
    , noodle
    , hspec

source-repository head
  type:     git
  location: https://github.com/MartinFillon/noodle
