cabal-version:       2.2

name:                noodle
version:             0.1.0
synopsis:            Noodle is a Haskell library for parsing and serializing data. It provides a simple and efficient way to work with these popular data formats in Haskell applications.
description:         Noodle is a Haskell library for parsing and serializing data. It provides a simple and efficient way to work with these popular data formats in Haskell applications. Noodle supports JSON, YAML, and TOML, making it a versatile choice for developers who need to handle various data formats in their projects. With its intuitive API and robust parsing capabilities, Noodle is designed to make it easy for developers to work with data in Haskell.
homepage:            https://github.com/MartinFillon/noodle#readme
license:             MIT
license-file:        LICENSE
author:              Martin Fillon
maintainer:          martin.fillon@hotmail.com
copyright:           2025-2026 Martin Fillon
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Noodle
    Noodle.Serialize
    Noodle.Serializer
    Noodle.Deserialize
    Noodle.Deserializer
    Noodle.Parser.Utils
    Noodle.Json
    Noodle.Json.Type
    Noodle.Json.Parser
    Noodle.Yaml
    Noodle.Yaml.Type
    Noodle.Yaml.Parser
    Noodle.Yaml.Parser.Numbers
    Noodle.Yaml.Parser.String
    Noodle.Toml
    Noodle.Toml.Type
  build-depends:       base >= 4.7 && < 5
                      , megaparsec
                      , mtl
                      , scientific
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite noodle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    DeserializerSpec
    SerializerSpec
    Yaml.ParserSpec
  hs-source-dirs: test
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  build-depends:
    base >=4.7 && <5
    , noodle
    , hspec

source-repository head
  type:     git
  location: https://github.com/MartinFillon/noodle
